--- a/persongalleri.html
+++ b/persongalleri.html
@@ -7,7 +7,7 @@
     <title>Persongalleri</title>
   </head>
   <style>
-    template {
+    main {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 10px;
@@ -19,7 +19,7 @@
 
     img {
       aspect-ratio: 1/1;
-      max-width: 25%;
+      max-width: 50%;
       object-fit: contain;
     }
   </style>
